fixed hover on IOS

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -60,10 +60,6 @@ body {
 	opacity: 1;
 }
 
-.desc:active{
-	opacity: 1;
-}
-
 #down{
 	background-image: url('http://iang.gg/pictures/down4sound.jpg');
 }
